test: configure Robolectric local tests